<resources>
    <string name="app_name">Crisp</string>
    <string name="logo_name">CRISP</string>
    <string name="full_name">COMPREHENSIVE RUBBER INFORMATION\nSYSTEMS PLATFORM</string>
    <string name="org_name">Rubber Institute of India</string>
    <string name="location_bs_title">Select a location</string>

    <string name="cont_1_title">Site Specific Recommendations</string>
    <string name="cont_2_title">Advisory</string>
    <string name="cont_3_title">FAQs</string>
    <string name="cont_4_title">Rubber Board Facilities Nearby me</string>
    <string name="cont_5_title">Rubber Market price per 100kg</string>
    <string name="cont_6_title">Current Weather</string>
    <string name="cont_7_title">5 Days Weather Forecast</string>

    <!-- Navigation menu options-->
    <string name="nav_opt1">My Plantations</string>
    <string name="nav_opt2">Change Password</string>
    <string name="nav_opt3">Change Language</string>
    <string name="nav_opt4">Log Out</string>

    <string name="navigation_drawer_open">OPEN</string>
    <string name="navigation_drawer_close">CLOSE</string>

    <!-- Ask an expert bottom menu -->
    <string name="expert_nav_opt1">Text</string>
    <string name="expert_nav_opt2">Image</string>

    <!--- Register/Login Screen-->
    <string name="register_title">User Registration</string>
    <string name="name">Full Name</string>
    <string name="username">Username</string>
    <string name="email">Enter your Email ID</string>
    <string name="phone_number">Enter your Phone Number</string>
    <string name="password">Enter password</string>
    <string name="confirm_password">Enter confirm password</string>

    <string name="cant_be_empty">This field cannot be empty</string>
</resources>