<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="@dimen/content_padding"
    tools:context=".activity.RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        style="@style/AppTitleStyle"
        android:textColor="@color/black"/>
    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/content_padding"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_reg_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                style="@style/LoginEditTextStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_reg_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_reg_layout_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_padding"
                android:hint="@string/username"
                style="@style/LoginEditTextStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_reg_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_reg_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_padding"
                android:hint="@string/email"
                app:startIconDrawable="@drawable/ic_email"
                style="@style/LoginEditTextStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_reg_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_reg_layout_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_padding"
                android:hint="@string/phone_number"
                app:startIconDrawable="@drawable/ic_phone_android_24"
                style="@style/LoginEditTextStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_reg_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_reg_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_padding"
                android:hint="@string/password"
                app:startIconDrawable="@drawable/ic_password_24"
                app:endIconMode="password_toggle"
                style="@style/LoginEditTextStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_reg_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_reg_layout_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_padding"
                android:hint="@string/confirm_password"
                app:startIconDrawable="@drawable/ic_password_24"
                app:endIconMode="password_toggle"
                style="@style/LoginEditTextStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_reg_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register_cancel"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_padding"
            android:text="Cancel"
            android:padding="@dimen/card_content_padding"
            style="@style/CancelButton"/>
        <Space
            android:layout_width="@dimen/content_padding"
            android:layout_height="wrap_content"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_padding"
            android:text="Register"
            android:padding="@dimen/card_content_padding"
            style="@style/LoginButton"/>
    </LinearLayout>
</LinearLayout>