<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/white">
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Top Box -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/content_padding">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/logo_name"
                android:src="@drawable/org_logo"
                app:tint="@color/app_green" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logo_name"
                style="@style/LogoTextStyle"
                android:textColor="@color/app_green"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:textAlignment="center"
                style="@style/MediumTextStyle"
                android:textColor="@color/app_green"/>
        </LinearLayout>

        <!-- Site Specific Recommendations -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="@dimen/content_padding"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/app_grey"
            android:layout_marginBottom="@dimen/content_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/card_content_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cont_1_title"
                    style="@style/MediumTextStyle"
                    android:textColor="@color/black"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_recommendations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/card_content_padding"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Advisory -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="@dimen/content_padding"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/app_grey"
            android:layout_marginBottom="@dimen/content_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/card_content_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cont_2_title"
                    style="@style/MediumTextStyle"
                    android:textColor="@color/black"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_advisory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/card_content_padding"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- FAQs -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="@dimen/content_padding"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/app_grey"
            android:layout_marginBottom="@dimen/content_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/card_content_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cont_3_title"
                    style="@style/MediumTextStyle"
                    android:textColor="@color/black"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_faqs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/card_content_padding"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Rubber Board Facilities Near me -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/card_content_padding"
                android:background="@color/app_grey">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cont_4_title"
                    style="@style/MediumTextBoldStyle"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_rubber_nearby"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/content_padding"/>
        </LinearLayout>

        <!-- Rubber Market Price per 100kg -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/card_content_padding"
                android:background="@color/app_grey">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cont_5_title"
                    style="@style/MediumTextBoldStyle"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_rubber_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/content_padding"/>
        </LinearLayout>

        <!-- Current Weather -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/card_content_padding"
                android:background="@color/app_grey">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cont_6_title"
                    style="@style/MediumTextBoldStyle"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/content_padding">


            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <!-- 5 Days weather forecast -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/card_content_padding"
                android:background="@color/app_grey">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cont_7_title"
                    style="@style/MediumTextBoldStyle"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_weather_forecast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/content_padding"/>
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>