<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_yellow"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.5"
        android:background="@color/app_yellow">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Logo Image -->
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/org_logo"
                android:tint="@color/app_green" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/LogoTextStyle"
                android:layout_marginTop="8dp"
                android:text="@string/logo_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MediumTextStyle"
                android:gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/full_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SmallTextStyle"
                android:layout_marginTop="8dp"
                android:text="@string/org_name" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:background="@drawable/bg_top_right_rounded"
        android:clipToOutline="true"
        android:gravity="center">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="@dimen/login_content_padding">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_layout_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:textColorHint="@color/dark_grey"
                    app:startIconDrawable="@drawable/ic_phone_android_24"
                    app:startIconTint="@color/dark_grey"
                    style="@style/LoginEditTextStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:inputType="phone"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/content_padding"
                    android:hint="@string/password"
                    android:textColorHint="@color/dark_grey"
                    app:startIconDrawable="@drawable/ic_password_24"
                    app:endIconMode="password_toggle"
                    app:startIconTint="@color/dark_grey"
                    app:endIconTint="@color/dark_grey"
                    style="@style/LoginEditTextStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/dark_grey"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_forgot_password"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:padding="0dp"
                    android:textAlignment="textEnd"
                    android:text="Forgot Password?"
                    android:textColor="@color/black"
                    android:background="#00000000"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/content_padding"
                    android:padding="@dimen/card_content_padding"
                    android:text="LOGIN"
                    style="@style/LoginButton"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Don't have an account?"
                        style="@style/SmallTextStyle"
                        android:textColor="@color/black"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="0dp"
                        android:text="Register"
                        android:gravity="center"
                        android:textColor="@color/red"
                        android:background="#00000000"/>

                </LinearLayout>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:src="@drawable/duk_logo"/>
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
